# benchmarks

./: .gitignore  README.md  benchmark.py  circom-results.txt  l-adic-results.txt  plot.py
circom/: .gitignore  large-mult.circom
l-adic/: .gitignore  cabal.project  cabal.project.local  large-mult.cabal
l-adic/cli/: Main.hs
l-adic/src/ZK/: LargeMult.hs
l-adic/test/: Main.hs
