cabal-version: 3.0
name:          large-mult
version:       0.1.0.0
author:        martyall
maintainer:    martyall@protonmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DataKinds
    TypeApplications
    NoImplicitPrelude
    NamedFieldPuns
    RecordWildCards
    OverloadedStrings
    ScopedTypeVariables

common deps
  build-depends:
      arithmetic-circuits
    , arithmetic-circuits:circom-compat
    , arithmetic-circuits:language
    , base
    , galois-field
    , protolude
    , vector-sized

library
  import:           warnings, extensions, deps
  exposed-modules:  ZK.LargeMult


  hs-source-dirs:   src
  default-language: GHC2021

executable large-mult-cli
  import:           warnings, extensions, deps
  main-is:          Main.hs
  build-depends:
      large-mult

  hs-source-dirs:   cli
  default-language: GHC2021

test-suite large-mult-test
  import:           warnings, extensions, deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      containers
    , hspec
    , large-mult
    , QuickCheck
